cmake_minimum_required(VERSION 3.14)
project(SD C)

set(CMAKE_C_STANDARD 99)
#
#file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "openNetVM/*.c")
#file(GLOB_RECURSE SOURCEHEADER RELATIVE ${CMAKE_SOURCE_DIR} "openNetVM/*.h")
#add_executable(main ${SOURCES})


#file(GLOB_RECURSE SOURCES openNetVM/*.h openNetVM/*.c)
#add_executable(yourProj ${SOURCES})



